Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,14 +205,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name=\"art.vandelay@vandelay.co\" # False\n",
-    "\".in(name)"
+    "check=\".com\"\n",
+    "check in(name)"
    ]
   },
   {
@@ -224,14 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "name='vandelay.com' # 'www.vandelay.com'\n",
+    "\"www.\" + name"
    ]
   },
   {
@@ -256,7 +277,8 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 728"
+    "telno=\"7285553334\" # 728\n",
+    "telmo[:]"
    ]
   },
   {
